# algo-trading-engine

./: .gitignore  README.md  pyproject.toml
apps/api/: main.py
apps/api/routes/: account.py  runs.py  strategies.py
apps/api/schemas/: runs.py  strategies.py
apps/api/services/: launcher.py
apps/runtime/: factory.py  runner.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: Layout.tsx  StatusBadge.tsx
apps/web/src/pages/: NewLivePage.tsx  NewSessionPage.tsx  NewStrategyPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx  StrategiesPage.tsx  StrategyDetailPage.tsx
credentials/: credential_store.py
docker/: .env.example  Dockerfile.api  Dockerfile.runtime  Dockerfile.web  docker-compose.yml  nginx.conf
scripts/: create_run.py  seed_strategies.py
tests/: conftest.py  test_engine.py  test_portfolio.py  test_risk.py
trading/core/: config.py  enums.py  events.py  models.py
trading/execution/: alpaca.py  base.py  simulated.py
trading/market_data/: base.py  historical.py  live.py
trading/metrics/: engine.py
trading/persistence/: db.py  orm_models.py  repositories.py
trading/portfolio/: tracker.py
trading/risk/: manager.py  rules.py
trading/runtime/: engine.py
trading/strategies/: base.py  loader.py
trading/strategies/seeds/: moving_average.py  rsi.py
