[project]
name = "algo-trading-engine"
version = "0.1.0"
description = "Event-driven backtesting and paper trading platform with FastAPI control plane and React dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.2",
    "docker>=7.1.0",
    "fastapi>=0.115",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34",
    "yfinance>=1.3.0",
]
